# cs344

./: .gitignore  CMakeLists.txt
AlgorithmImplementations/: CMakeLists.txt
AlgorithmImplementations/Scan/: BlellochScan.cu  CMakeLists.txt  HillisSteeleScan.cu  Scan.cpp  SerialBlelloch.h
Docker/: Dockerfile  build.sh  run.sh
Final/: CMakeLists.txt
Final/smooth/: smooth.cu
Lesson Code Snippets/Lesson 7 Code Snippets/tiling/: tiling.cu
Problem Sets/Problem Set 1/: student_func.cu
Problem Sets/Problem Set 2/: student_func.cu
Problem Sets/Problem Set 3/: student_func.cu
Problem Sets/Problem Set 4/: CMakeLists.txt  main.cpp  student_func.cu
Problem Sets/Problem Set 5/: CMakeLists.txt  HW5_profile.nvvp  main.cu  student.cu
Problem Sets/Problem Set 6/: CMakeLists.txt  student_func.cu
test/: CMakeLists.txt
test/ps3/: test.cpp  test_Homework3.cpp  test_Homework3.h
