############################################################################
# <summary> CMakeLists.txt for implementations of fundamental GPU algorithms
#           from Udacity lectures. </summary>
# <date>    2018-01-21          </date>
# <author>  Tanmay Bangalore  </author>
############################################################################

add_subdirectory(Scan)